--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,15 +12,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 {% if user %}
-    <title>Welcome to {{ user.username }}'s site</title>
-    {% else %}
-    <title>Welcome to My Site!</title>
+    <title>Welcome to {{ user.username }}'s site!!</title>
+    {%else%}
+    <title>Welcome to the Site!!</title>
     {% endif %}
 <head>
  <body>
 <!-- As a heading -->
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">{% if user %}{{ user.username }}'s Homepage{% else %}
     <title>Welcome to My Homepage</title>
